# logbook-rs

./: Cargo.toml  README.md  logbook
src/: config.rs  logbook.rs  main.rs
src/entry/: mod.rs
src/logbook/: mod.rs  reader.rs  writer.rs
