[package]
name = "logbook"
version = "0.1.0"
authors = ["Lee <leet944@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4"
chrono = "0.4"
chrono-tz = "0.4"
dirs = "2.0.2"
itertools = "0.9"
text_io = "0.1.8"

[dependencies.clap]
version = "~2.33.0"
features = ["yaml"]

[dependencies.serde]
version = "1.0"
features = ["derive"]